# game-of-life-rs

./: Cargo.toml  README.md
src/: main.rs
