[package]
name = "boids"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
rand = "0.8.5"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "life"
path = "src/life.rs"
